# dash_example

./: README.md  pyproject.toml
part1/: app.py  components.py
part2/: app.py  components.py  graph.py
part2/example_data/: IDCJAC0010_023034_2023_Data.csv
